<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/panel_bg"
        android:orientation="vertical" >

         <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/title_bg"
            android:gravity="center" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/icon" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#fff"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/content"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="#fff"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#00000000"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/phone_480" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/phone"
                    android:textColor="#000"
                    android:textSize="16sp" />
            </LinearLayout>

            <Button
                android:id="@+id/ok_btn"
                android:layout_width="336dp"
                android:layout_height="51dp"
                android:layout_margin="10dp"
                android:background="@drawable/btn_normal"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="#fff"
                android:textSize="18sp" />

            <Button
                android:id="@+id/cancle_btn"
                android:layout_width="336dp"
                android:layout_height="51dp"
                android:layout_margin="10dp"
                android:background="@drawable/btn_normal"
                android:gravity="center"
                android:text="@string/cancle"
                android:textColor="#fff"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>